fix(landing): tweak margins on footer to avoid wrapping

--- a/src/layouts/landing/styles.module.scss
+++ b/src/layouts/landing/styles.module.scss
@@ -31,10 +31,11 @@
 .contact-container {
   display: flex;
   flex-direction: row;
-  margin: 2.5rem 1.875rem;
+  justify-content: space-between;
+  margin: 2.5rem 1.625rem;
 
   .newsletter-form {
-    margin-right: 1.875rem;
+    margin-right: 1rem;
   }
 
   @media (min-width: $theme-breakpoints-mobile) {
